--- a/public/profile.html
+++ b/public/profile.html
@@ -6,6 +6,7 @@
   <title>Profile</title>
   <link rel="stylesheet" href="/styles/base.css" />
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/tesseract.js@4/dist/tesseract.min.js"></script>
   <script src="/scripts/ambient.js" defer></script>
 
   <style>
